--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "from bs4 import BeautifulSoup\n",
     "from splinter import Browser\n",
     "import pandas as pd\n",
-    "import requests"
+    "import requests\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -355,11 +356,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mars Hemispheres (Splinter)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Visit hemispheres website through splinter module \n",
+    "hemispheres_url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(hemispheres_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/3cdd1cbf5e0813bba925c9030d13b62e_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/ae209b4e408bb6c3e67b6af38168cf28_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/7cf2da4bf549ed01c17f206327be4db7_valles_marineris_enhanced.tif_full.jpg'}]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# HTML Object\n",
+    "html_hemispheres = browser.html\n",
+    "\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(html_hemispheres, 'html.parser')\n",
+    "\n",
+    "# Retreive all items that contain mars hemispheres information\n",
+    "items = soup.find_all('div', class_='item')\n",
+    "\n",
+    "# Create empty list for hemisphere urls \n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# Store the main_ul \n",
+    "hemispheres_main_url = 'https://astrogeology.usgs.gov'\n",
+    "\n",
+    "# Loop through the items previously stored\n",
+    "for i in items: \n",
+    "    # Store title\n",
+    "    title = i.find('h3').text\n",
+    "    \n",
+    "    # Store link that leads to full image website\n",
+    "    partial_img_url = i.find('a', class_='itemLink product-item')['href']\n",
+    "    \n",
+    "    # Visit the link that contains the full image website \n",
+    "    browser.visit(hemispheres_main_url + partial_img_url)\n",
+    "    \n",
+    "    # HTML Object of individual hemisphere information website \n",
+    "    partial_img_html = browser.html\n",
+    "    \n",
+    "    # Parse HTML with Beautiful Soup for every individual hemisphere information website \n",
+    "    soup = BeautifulSoup( partial_img_html, 'html.parser')\n",
+    "    \n",
+    "    # Retrieve full image source \n",
+    "    img_url = hemispheres_main_url + soup.find('img', class_='wide-image')['src']\n",
+    "    \n",
+    "    # Append the retreived information into a list of dictionaries \n",
+    "    hemisphere_image_urls.append({\"title\" : title, \"img_url\" : img_url})\n",
+    "    \n",
+    "\n",
+    "# Display hemisphere_image_urls\n",
+    "hemisphere_image_urls"
+   ]
   }
  ],
  "metadata": {
